# elfobs

./: README.md  pyproject.toml
elfobs/: __init__.py  cli.py  display.py  image.py  sched.py  sound.py
tests/: test_cli.py  test_display.py  test_image.py  test_obs.py  test_sound.py  test_video.py
