[tool.poetry]
name = "elfobs"
version = "0.1.0"
description = ""
authors = ["Aldo A. Villagra B. <Aldo A. Villagra B.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
typer = {extras = ["all"], version = "^0.9.0"}
pendulum = "^2.1.2"
pillow = "^10.0.1"
pyalsaaudio = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elfobs = 'elfobs.cli:app'
